# WhatsApp-Portable-Multi-Profile-Manage

./: README.md  package-lock.json  package.json  profiles.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: whatsapp.json
src-tauri/src/: lib.rs
